# gadgets

./: CMakeLists.txt  LICENSE  evaluation.hpp  gadgets.cpp
include/: blocking_queue.hpp  evaluation.hpp
include/test/: CMakeLists.txt  test.cpp
